AM_CFLAGS = \
	$(WARN_CFLAGS) \
	-I./ \
	-I${includedir}

libnx_deinterlacer_la_LTLIBRARIES = libnx_deinterlacer.la
libnx_deinterlacer_ladir = ${libdir}
libnx_deinterlacer_la_LDFLAGS = -L${libdir}

libnx_deinterlacer_la_SOURCES = \
	nx-deinterlacer.c

libnx_deinterlacerincludedir = ${includedir}
libnx_deinterlacerinclude_HEADERS = \
	nx-deinterlacer.h

